pihole-external/addprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-prefix
  namespace: pihole-external
spec:
  addPrefix:
    prefix: /admin
