pihole-external/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: pihole-external
  name: pihole-external
  namespace: pihole-external
spec:
  type: ExternalName
  externalName: 192.168.1.2
  ports:
    - port: 8080
