pihole-external/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-external
  namespace: pihole-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.santos.party`)
      kind: Rule
      services:
        - name: pihole-external
          port: 8080
      middlewares:
        - name: default-headers
        - name: add-prefix
  tls:
    secretName: santos-party-tls
